--- a/business/index.html
+++ b/business/index.html
@@ -57,7 +57,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="top_left_cont zoomIn wow animated">
-                <h2><strong>中瀚物业</strong>评估咨询监理机构</h2>
+                <h2><strong>中瀚物业</strong>咨询机构</h2>
                 <h2>公平 公正 公开 诚实守信</h2>
                 <a href="#service" class="read_more2">了解更多</a>
               </div>
@@ -82,7 +82,7 @@
                 <div class="col-md-6">
                   <!-- <h3>We Design Awesome Web Apps</h3> -->
                   <p>
-                    中瀚物业评估咨询机构是舟山一家专业的第三方物业咨询机构，于2022年2月15日在舟山市市场监督管理局注册成立，注册资本为50 万元人民币。</p>
+                    中瀚是舟山一家专业的第三方物业咨询机构，于2022年2月15日在舟山市市场监督管理局注册成立，注册资本为50 万元人民币。</p>
                   <p>
                     我公司主要经营物业服务咨询，物业服务活动策划，物业服务质量及费用评估，物业招投标代理，物业服务技能指导，物业承接查验服务，接受业主及其他机构委托从事物业服务事务可提供物业咨询顾问服务、物业管理方案策划、物业项目招投标代理、第三方满意度调查及评估、第三方服务质量检查及评估、物业项目承接查验、创优项目顾问等服务。我们始终为客户提供好的产品和技术支持、健全的售后服务,恪守信誉，一切以使合作客户获利更多、发展更快为宗旨，以用户满意为最终目标。
                   </p>
@@ -225,7 +225,7 @@
               </div>
               <div class="detail">
                 <h4>电话</h4>
-                <p>0580-2615577<br />13733183657</p>
+                <p>0580-2615577<br />19105806156</p>
               </div>
               <div class="detail">
                 <h4>Email</h4>
@@ -233,7 +233,7 @@
               </div>
               <div class="detail">
                 <h4>地址</h4>
-                <p>舟山市定海区解放东路231号 B-501室</p>
+                <p>舟山市定海区解放东路217号旁 东门交通综合体 B601</p>
               </div>
             </div>
 
