--- a/business/index.html
+++ b/business/index.html
@@ -233,7 +233,7 @@
               </div>
               <div class="detail">
                 <h4>地址</h4>
-                <p>舟山市定海区解放东路217号旁 东门交通综合体 B601</p>
+                <p>舟山市定海区解放东路217号旁东门交通综合体 B601室</p>
               </div>
             </div>
 
