add extra images and logos

--- a/business/index.html
+++ b/business/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, maximum-scale=1">
-  <title>Trendy free bootstrap responsive website template | Webthemez</title>
+  <title>中瀚物业咨询</title>
   <link rel="icon" href="favicon.png" type="image/png">
   <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
@@ -57,9 +57,9 @@
           <div class="row">
             <div class="col-md-12">
               <div class="top_left_cont zoomIn wow animated">
-                <h2><strong>中瀚物业</strong>咨询机构</h2>
-                <h2>公平 公正 公开 诚实守信</h2>
-                <a href="#service" class="read_more2">了解更多</a>
+                <h2><strong>中瀚物业咨询机构</strong></h2>
+                <h1>公平 公正 公开 诚实守信</h1>
+                <!-- <a href="#service" class="read_more2">了解更多</a> -->
               </div>
             </div>
           </div>
@@ -174,20 +174,20 @@
 
 
   <!-- Portfolio -->
-  <section id="Portfolio" class="content">
+  <!-- <section id="Portfolio" class="content"> -->
 
     <!-- Container -->
-    <div class="container portfolio_title">
+    <!-- <div class="container portfolio_title"> -->
 
       <!-- Title -->
-      <div class="section-title">
-        <h2>服务案例</h2>
-      </div>
+      <!-- <div class="section-title"> -->
+        <!-- <h2>服务案例</h2> -->
+      <!-- </div> -->
       <!--/Title -->
 
-    </div>
+    <!-- </div> -->
     <!-- Container -->
-  </section>
+  <!-- </section> -->
   <!--/Portfolio -->
 
   <section class="page_section team" id="team">
