update 招贤纳士 section

--- a/business/index.html
+++ b/business/index.html
@@ -38,7 +38,7 @@
               <li class="active"><a href="#hero_section" class="scroll-link">首页</a></li>
               <li><a href="#aboutUs" class="scroll-link">关于我们</a></li>
               <li><a href="#service" class="scroll-link">服务范围</a></li>
-              <li><a href="#Portfolio" class="scroll-link">服务案例</a></li>
+              <!-- <li><a href="#Portfolio" class="scroll-link">服务案例</a></li> -->
               <li><a href="#team" class="scroll-link">招贤纳士</a></li>
               <li><a href="#contact" class="scroll-link">联系我们</a></li>
             </ul>
@@ -123,43 +123,43 @@
             <div class="service_block">
               <div class="service_icon delay-03s animated wow  zoomIn">
                 <img src="img/eveluation.png" />
-                 <!-- <span><i class="fa fa-calculator"></i></span> -->
+                <!-- <span><i class="fa fa-calculator"></i></span> -->
               </div>
               <h3 class="animated fadeInUp wow">评估服务</h3>
               <p class="animated fadeInDown wow">
-                第三方客户满意度调查及评估 <br/>
-                第三方物业服务质量检查及评估 <br/>
-                第三方物业服务费用评估 <br/>
+                第三方客户满意度调查及评估 <br />
+                第三方物业服务质量检查及评估 <br />
+                第三方物业服务费用评估 <br />
               </p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="service_block">
-              <div class="service_icon icon2  delay-03s animated wow zoomIn"> 
+              <div class="service_icon icon2  delay-03s animated wow zoomIn">
                 <img src="img/seo-consultant-icon-vector-20968212.jpeg" />
-                
+
                 <!-- <span><i class="fa fa-users"></i></span> -->
               </div>
               <h3 class="animated fadeInUp wow">咨询顾问服务</h3>
               <p class="animated fadeInDown wow">
-                物业经营管理顾问 <br/> 
-                物业项目管理顾问 <br/> 
-                创优顾问及培训 <br/> 
-接受业主及其他机构委托从事物业服务事务可提供物业咨询顾问服务 </p>
+                物业经营管理顾问 <br />
+                物业项目管理顾问 <br />
+                创优顾问及培训 <br />
+                接受业主及其他机构委托从事物业服务事务可提供物业咨询顾问服务 </p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="service_block">
-              <div class="service_icon icon3  delay-03s animated wow zoomIn"> 
+              <div class="service_icon icon3  delay-03s animated wow zoomIn">
                 <!-- <span><i class="fa fa-user-tie"></i></span> -->
                 <img src="img/daili.jpeg" />
               </div>
               <h3 class="animated fadeInUp wow">代理服务</h3>
               <p class="animated fadeInDown wow">
-                物业管理项目招投标代理 <br/> 
-                第三方物业项目承接查验<br/> 
-                保修金退还 <br/> 
-                白蚁普查 <br/> 
+                物业管理项目招投标代理 <br />
+                第三方物业项目承接查验<br />
+                保修金退还 <br />
+                白蚁普查 <br />
                 物业管理早期介入
               </p>
             </div>
@@ -176,17 +176,17 @@
   <!-- Portfolio -->
   <!-- <section id="Portfolio" class="content"> -->
 
-    <!-- Container -->
-    <!-- <div class="container portfolio_title"> -->
+  <!-- Container -->
+  <!-- <div class="container portfolio_title"> -->
 
-      <!-- Title -->
-      <!-- <div class="section-title"> -->
-        <!-- <h2>服务案例</h2> -->
-      <!-- </div> -->
-      <!--/Title -->
+  <!-- Title -->
+  <!-- <div class="section-title"> -->
+  <!-- <h2>服务案例</h2> -->
+  <!-- </div> -->
+  <!--/Title -->
 
-    <!-- </div> -->
-    <!-- Container -->
+  <!-- </div> -->
+  <!-- Container -->
   <!-- </section> -->
   <!--/Portfolio -->
 
@@ -194,7 +194,50 @@
     <!--main-section team-start-->
     <div class="container">
       <h2>招贤纳士</h2>
-      <h6>敬请期待</h6>
+      <div class="row">
+        <div class="animated fadeIn wow delay-02s">
+          <h3>招标部专员</h3>
+          <div class="col-md-6">
+            <h4>岗位职责</h4>
+            <ul>
+              <li>在部门经理的领导下完成招投标代理业务</li>
+              <li>配合完成招标代理工作流程，编写招标文件、发布公告、开标会议服务、编写《评标结果报告》等</li>
+              <li>整理已完成招标工作的系统资料，进行归档</li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <h4>任职要求</h4>
+            <ul>
+              <li>工程类或物业管理类相关专业大专以上学历</li>
+              <li>有较强的组织、协调及沟通能力，良好的职业素养及团队合作意识，责任心强</li>
+              <li>具有招标员或招标师职业资格水平证书者优先考虑</li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="animated fadeIn wow delay-02s">
+          <h3>第三方评估部专员</h3>
+          <div class="col-md-6">
+            <h4>岗位职责</h4>
+            <ul>
+              <li>在部门经理的领导下完成第三方评估部业务</li>
+              <li>配合完成客户满意度调查和信用评估工作，现场督导、数据审核、网站更新、客户回访等</li>
+              <li>整理已完成评估的客户资料，进行归档</li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <h4>任职要求</h4>
+            <ul>
+              <li>统计类或物业管理类相关专业大专以上学历</li>
+              <li>有较强的组织、协调及沟通能力，良好的职业素养及团队合作意识，责任心强</li>
+              <li>学习能力强，吃苦耐劳</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!--/Team-->
@@ -233,7 +276,7 @@
               </div>
               <div class="detail">
                 <h4>地址</h4>
-                <p>舟山市定海区解放东路217号旁东门交通综合体 B601室</p>
+                <p>舟山市定海区解放东路217号旁东门交通综合体 B501室</p>
               </div>
             </div>
 
@@ -259,7 +302,7 @@
       </section>
     </div>
     <div class="container">
-      <div class="footer_bottom"><span>Copyright © 2022, zhonghanwuye
+      <div class="footer_bottom"><span>Copyright © 2022, zhonghanwuyezixun.com
         </span> </div>
     </div>
   </footer>
