contact us with white background

--- a/business/index.html
+++ b/business/index.html
@@ -79,7 +79,7 @@
           <div class="row">
             <div class="col-lg-12 about-us">
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 detail">
                   <!-- <h3>We Design Awesome Web Apps</h3> -->
                   <p>
                     中瀚是舟山一家专业的第三方物业咨询机构，于2022年2月15日在舟山市市场监督管理局注册成立，注册资本为50 万元人民币。</p>
@@ -88,14 +88,6 @@
                   </p>
                   <p>我公司属于舟山咨询服务公司行业，如果您对我公司的产品服务有兴趣，期待您的来电咨询。
                   </p>
-
-                  <!-- <ul class="about-us-list">
-										<li class="points">Consectetur Morbi sagittis, sem quisci ipsum gravida tortor</li>
-										<li class="points">Morbi sagittis, sem quis lacinia faucibus, orci ipsum gravida </li>
-										<li class="points">Lorem ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci gravida </li>
-                                        <li class="points">Sagittis, sem quis lacinia faucibus, orci ipsum gravida </li>
-										<li class="points">Ipsum dolor sit amet, consectetur Morbi sagittis, sem quisci</li>
-									</ul>/.about-us-list -->
                   <div class="about-us-link">
                     <a href="#contact" class="read_more">联系我们</a>
                   </div><!-- /.about-us-link -->
@@ -242,65 +234,62 @@
   </section>
   <!--/Team-->
   <!--Footer-->
-  <footer class="footer_wrapper" id="contact">
-    <div class="container">
-      <section class="page_section contact" id="contact">
-        <div class="contact_section">
-          <h2>联系我们</h2>
-          <div class="row">
-            <div class="col-lg-4">
+  <div class="container">
+    <section class="page_section contact" id="contact">
+      <div class="contact_section">
+        <h2>联系我们</h2>
+        <div class="row">
+          <div class="col-lg-4">
 
-            </div>
-            <div class="col-lg-4">
+          </div>
+          <div class="col-lg-4">
 
-            </div>
-            <div class="col-lg-4">
+          </div>
+          <div class="col-lg-4">
 
-            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-4 wow fadeInLeft">
-            <div class="contact_info">
-              <div class="detail">
-                <h4>业务顾问</h4>
-                <p>杨经理</p>
-              </div>
-              <div class="detail">
-                <h4>电话</h4>
-                <p>0580-2615577<br />19105806156</p>
-              </div>
-              <div class="detail">
-                <h4>Email</h4>
-                <p>zhkfyy@163.com</p>
-              </div>
-              <div class="detail">
-                <h4>地址</h4>
-                <p>舟山市定海区解放东路217号旁东门交通综合体 B501室</p>
-              </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-4 wow fadeInLeft">
+          <div class="contact_info">
+            <div class="detail">
+              <h4>业务顾问</h4>
+              <p>杨经理</p>
             </div>
-
-
-
-            <!-- <ul class="social_links">
+            <div class="detail">
+              <h4>电话</h4>
+              <p>0580-2615577<br />19105806156</p>
+            </div>
+            <div class="detail">
+              <h4>Email</h4>
+              <p>zhkfyy@163.com</p>
+            </div>
+            <div class="detail">
+              <h4>地址</h4>
+              <p>舟山市定海区解放东路217号旁东门交通综合体 B501室</p>
+            </div>
+          </div>
+          <!-- <ul class="social_links">
             <li class="twitter animated bounceIn wow delay-02s"><a href="javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
             <li class="facebook animated bounceIn wow delay-03s"><a href="javascript:void(0)"><i class="fa fa-facebook"></i></a></li>
             <li class="pinterest animated bounceIn wow delay-04s"><a href="javascript:void(0)"><i class="fa fa-pinterest"></i></a></li>
             <li class="gplus animated bounceIn wow delay-05s"><a href="javascript:void(0)"><i class="fa fa-google-plus"></i></a></li> 
           </ul> -->
-          </div>
-          <div class="col-lg-8 wow fadeInLeft delay-06s">
-            <img src="img/map.png">
-            <!-- <div class="form">
+        </div>
+        <div class="col-lg-8 wow fadeInLeft delay-06s">
+          <img src="img/map.png">
+          <!-- <div class="form">
             <input class="input-text" type="text" name="" value="Your Name *" onFocus="if(this.value==this.defaultValue)this.value='';" onBlur="if(this.value=='')this.value=this.defaultValue;">
             <input class="input-text" type="text" name="" value="Your E-mail *" onFocus="if(this.value==this.defaultValue)this.value='';" onBlur="if(this.value=='')this.value=this.defaultValue;">
             <textarea class="input-text text-area" cols="0" rows="0" onFocus="if(this.value==this.defaultValue)this.value='';" onBlur="if(this.value=='')this.value=this.defaultValue;">Your Message *</textarea>
             <input class="input-btn" type="submit" value="send message">
           </div> -->
-          </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
+  </div>
+  <footer class="footer_wrapper" id="contact">
     <div class="container">
       <div class="footer_bottom"><span>Copyright © 2022, zhonghanwuyezixun.com
         </span> </div>
