--- a/business/index.html
+++ b/business/index.html
@@ -291,7 +291,8 @@
   </div>
   <footer class="footer_wrapper" id="contact">
     <div class="container">
-      <div class="footer_bottom"><span>Copyright © 2022, zhonghanwuyezixun.com
+      <div class="footer_bottom"><span>Copyright © 2022,Zhonghan Estate Management Consultation
+
         </span> </div>
     </div>
   </footer>
